--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@react-email/components": "^0.0.19",
+    "@react-email/render": "^0.0.17",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.3.1",
     "aos": "^3.0.0-beta.6",
     "next": "^14.0.4",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "resend": "^3.3.0",
     "sharp": "^0.33.5",
+    "stream": "^0.0.3",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
